# ChangeLog for dev-cpp/cppserv
# Copyright 2006-2009 Gentoo Foundation; Distributed under the GPL v2
# $Header: /usr/local/ssd/gentoo-x86/output/dev-cpp/cvs-repo/gentoo-x86/dev-cpp/cppserv/Attic/ChangeLog,v 1.30 2009/01/06 05:37:27 iluxa Exp $

*cppserv-0.2.1 (06 Jan 2009)

  06 Jan 2009; Ilya A. Volynets-Evenbakh <iluxa@gentoo.org>
  +cppserv-0.2.1.ebuild:
  Add cppserv-0.2.1

*cppserv-0.2.0 (29 Dec 2008)

  29 Dec 2008; Ilya A. Volynets-Evenbakh <iluxa@gentoo.org>
  +cppserv-0.2.0.ebuild:
  Add cppserv-0.2.0 ebuild

*cppserv-0.1.119 (15 Dec 2008)

  15 Dec 2008; Ilya A. Volynets-Evenbakh <iluxa@gentoo.org>
  -cppserv-0.1.118.ebuild, +cppserv-0.1.119.ebuild:
  Repace cppserv-0.1.118 with cppserv-0.1.119, which fixes critical compile error

*cppserv-0.1.118 (14 Dec 2008)

  14 Dec 2008; Ilya A. Volynets-Evenbakh <iluxa@gentoo.org>
  +cppserv-0.1.118.ebuild:
  Add cppserv-0.1.118

*cppserv-0.1.117 (02 Dec 2008)

  02 Dec 2008; Ilya A. Volynets-Evenbakh <iluxa@gentoo.org>
  +cppserv-0.1.117.ebuild:
  Add cppserv-0.1.117

*cppserv-0.1.116 (11 Nov 2008)

  11 Nov 2008; Ilya A. Volynets-Evenbakh <iluxa@gentoo.org>
  -cppserv-0.1.113.ebuild, +cppserv-0.1.116.ebuild:
  Add cppserv-0.1.116
  Remove cppserv-0.1.113

  09 Oct 2008; Ilya A. Volynets-Evenbakh <iluxa@gentoo.org>
  cppserv-0.1.115.ebuild:
  Fix libdir path

*cppserv-0.1.115 (08 Oct 2008)

  08 Oct 2008; Ilya A. Volynets-Evenbakh <iluxa@gentoo.org>
  -cppserv-0.1.109.ebuild, -cppserv-0.1.112.ebuild, +cppserv-0.1.115.ebuild:
  Added cppserv-0.1.115.
  Removed old versions.
  Fixed flag processing.
  Fixed 64bit install paths.

*cppserv-0.1.113 (27 Jun 2008)

  27 Jun 2008; Ilya A. Volynets-Evenbakh <iluxa@gentoo.org>
  +cppserv-0.1.113.ebuild:
  Add cppserv-0.1.113

*cppserv-0.1.112 (20 Jun 2008)

  20 Jun 2008; Ilya A. Volynets-Evenbakh <iluxa@gentoo.org>
  -cppserv-0.1.111.ebuild, +cppserv-0.1.112.ebuild:
  #216297 is really adressed by .112

*cppserv-0.1.111 (20 Jun 2008)
