@@ -1,15 +1,7 @@
 AUX 75_mod_cserv.conf 231 RMD160 8e0e799a476d4d2cba3ccc992eb3687b17e9f127 SHA1 a35f3196ff880de9f196e01a407db52c61ced631 SHA256 86b338abda5d6966bfc885030c18132e78e3fc2b69d09b1901cf54e309552474
-DIST cppserv-0.1.115.tar.bz2 124874 RMD160 58a7623f9397563137c5e4e0dbab8d378fba19b6 SHA1 7e61094e30a89dd2b3129e1d0b486e889540d4cf SHA256 a7678b333c27cbafbc296413219ddf88399262cc98e9de9815e10662bbc3048e
-DIST cppserv-0.1.116.tar.bz2 124920 RMD160 d2bae66bb35efedf84af03126153668e05e111cf SHA1 4e22373590e2e7f6ad7ffa0bb428ff0488801744 SHA256 c9443235898a7162f80e3c986b474e4ec448f70ec8154cd16e87fcb43648d1fc
-DIST cppserv-0.1.117.tar.bz2 125131 RMD160 3c9f5b5dda6cb59e999e9f89e96f1d2a2e103561 SHA1 76a0e171ff4126229861daab50b1523bfc3c55a6 SHA256 c2da2c204ae8efb1d84612ff624a702b31590af1858d0700e9fe3c5a46bfadcf
 DIST cppserv-0.1.119.tar.bz2 130753 RMD160 3e8fab59a0a1db47346ff974b8f0b920fa12f75d SHA1 47e6ce9675a18b411bf65e57cebba857187ef0c6 SHA256 3892b0d2320b1b002d128ffd9abd88cbce53b0e576b9c0f025dc066f6845c2a5
-DIST cppserv-0.2.0.tar.bz2 133077 RMD160 45775b2023c2e1bf3ef4c5404e30299b30cc1431 SHA1 42f792cf2b37615dca9eedc5e1afc9312e69eff9 SHA256 3a3049b22b7ec118a03edd2c13d04066e194d2bcbc994a9e0f80db4e2640818b
-DIST cppserv-0.2.1.tar.bz2 134170 RMD160 a913a4e29aae41fcf654f84567097389955c9de8 SHA1 76368f0c928e7b93e146c92ef23cd410546a66ee SHA256 adc7bdf765fa1806aeb0042a3cd3c55a823c6e258dc4e933221468ef94629fdf
-EBUILD cppserv-0.1.115.ebuild 1582 RMD160 212a5ede711898ccd5dfd99cddeac7e51e1eed55 SHA1 a877653d33fce9939eab58a4045ad4f5caad26a4 SHA256 5631e769326b714e6a8025980d4d2b10eaec6d1884e21a476970f21b742bc75b
-EBUILD cppserv-0.1.116.ebuild 1582 RMD160 aaf50cf7a4b18194f2527f0538b8a6fcd4c67456 SHA1 c985143895984dfd1a15df9afb5083f512f37b8d SHA256 844b97b70a9d86ee30a120930d8a4c4e467c902fbc09a3245956a81694fdd98c
-EBUILD cppserv-0.1.117.ebuild 1582 RMD160 02aa030ffe0400ed89aea4ad4f4ce9f33644c8b5 SHA1 61726301de1a9b46545242d96c04b60b03a710e3 SHA256 eb2fad73df0755d4f5b69c6ec17f0feb3081945dd4fabef3d1ca83eab22212cf
+DIST cppserv-0.2.1.tar.bz2 134209 RMD160 b163010dbc8745f022962ef43eb4fbf15ab59e80 SHA1 c41ff69dbbaa622bdbb0ccabbfada5c00cdb0cbb SHA256 377c1ab3ef11e2d2f709388dea643af941b088cbbdfb8cf222b9c939e9f8f205
 EBUILD cppserv-0.1.119.ebuild 1582 RMD160 9effddf2d460631d7b2eec32b660e33ee6f402cd SHA1 11c80242e3849c2a038a8cb3a71cbb43772cbe53 SHA256 0bd9caf5feabc3325229e25b784e8c58ef1f6d80667c4d751263fc1647bdcc50
-EBUILD cppserv-0.2.0.ebuild 1580 RMD160 e3dbd25b94b9f4595f5fb247d305319a1c405fc2 SHA1 f47cbfdb84fd4bb14cb07fecfcee700dd6eb990b SHA256 b67027005b3bcda2bcbbe4573d0750bf9fde9deefbb4cd97634768578da6a6af
 EBUILD cppserv-0.2.1.ebuild 1580 RMD160 28de55ebbaa1051975832c988e2001d887a106c0 SHA1 2b1812f1342b3520b27ac3f60b0f129bb1330653 SHA256 1ab8840e4bef46148f141c6a730c267c9e61fc4abce0796bf3ab736bfabdbb4a
-MISC ChangeLog 5338 RMD160 f5cd91050de8a6ead79e8bed17c5e91565cd113c SHA1 76f05deb15a681b329ec8a9e627b5450d3ea7cdd SHA256 cd84768ac05432dee2f28cc149695a0d036fdcda57b838949cdac67557012518
+MISC ChangeLog 5531 RMD160 72cfc9a41e5422e11a4d7578cee7c39061ef4fbc SHA1 080d46ccb9d1a8c3fa8d024e087604b97252bfc8 SHA256 47b2ef3aee983494c2eec28a09db9f50231abc888fa64f61cbca329a2dd27ea0
 MISC metadata.xml 600 RMD160 c9f6bc48b1a249bc45694ead1bce81ae4884e20b SHA1 82c78fe487e15395dac82d6b120ba4a8dd02c32a SHA256 c782d5a3513f3575a8b5795171f5e9507858b36ec6321d9e698432d96c219837
