@@ -1,6 +1,11 @@
 # ChangeLog for dev-cpp/cppserv
 # Copyright 2006-2009 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/dev-cpp/cvs-repo/gentoo-x86/dev-cpp/cppserv/Attic/ChangeLog,v 1.30 2009/01/06 05:37:27 iluxa Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/dev-cpp/cvs-repo/gentoo-x86/dev-cpp/cppserv/Attic/ChangeLog,v 1.31 2009/01/06 15:39:27 iluxa Exp $
+
+  06 Jan 2009; Ilya A. Volynets-Evenbakh <iluxa@gentoo.org>
+  -cppserv-0.1.115.ebuild, -cppserv-0.1.116.ebuild, -cppserv-0.1.117.ebuild,
+  -cppserv-0.2.0.ebuild:
+  Remove old CPPSERV versions
 
 *cppserv-0.2.1 (06 Jan 2009)
 
